# teju_jagua

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE-MIT.txt  README.md  amaru.c  amaru.h  build_all.sh  common.c  common.h  common.hpp  config32.h  generator.cpp  linear.hpp  main.cpp  results.csv  table32.h
LICENSES/: APACHE-2.0.txt
amaru/: CMakeLists.txt  README.md  amaru.h  common.h  config.h  div10.h  double.c  double.h  double_compact.c  double_compact.h  float.c  float.h  float128.c  float128.h  float_compact.c  float_compact.h  ieee754.h  infimum.h  literal.h  mshift.h  multiply.h  multiply_fwd.h  notes.txt  pack.h  types.h
benchmark/: benchmark.cpp  main.cpp  sampler.hpp  stats.hpp  traits.hpp
cmake/: float128.c  float16.c  uint128.c
config/: bfloat16.json  ieee128.json  ieee128_compact.json  ieee128_full.json  ieee16.json  ieee16_no_uint128.json  ieee16_with_uint128.json  ieee32.json  ieee32_compact.json  ieee32_full.json  ieee32_no_uint128.json  ieee32_with_uint128.json  ieee64.json  ieee64_compact.json  ieee64_full.json  ieee64_no_uint128.json  ieee64_with_uint128.json  x86-extended.json
cpp/: CMakeLists.txt
cpp/benchmark/: CMakeLists.txt  main.cpp  sampler.hpp  stats.hpp
cpp/benchmark2/: CMakeLists.txt  main.cpp  stats.hpp
cpp/common/: CMakeLists.txt  dragonbox.cpp  dragonbox.hpp  exception.hpp  fields.hpp  fp_traits.hpp  other.cpp  other.hpp  ryu.hpp  traits.cpp  traits.hpp
cpp/common/include/common/: dragonbox.hpp  exception.hpp  fields.hpp  ryu.hpp  traits.hpp
cpp/common/src/: dragonbox.cpp  traits.cpp
cpp/generator/: CMakeLists.txt  config.cpp  config.hpp  exception.hpp  generator.cpp  generator.hpp  main.cpp  multiprecision.hpp  splitter.cpp  splitter.hpp
cpp/test/: CMakeLists.txt  built_in_1.cpp  built_in_1_small_shift.cpp  built_in_2.cpp  built_in_4.cpp  div10.cpp  impl.hpp  log.cpp  main.cpp  mshift.cpp  synthetic_1.cpp  synthetic_1.hpp  synthetic_1_small_shift.cpp  synthetic_2.cpp  synthetic_2.hpp  synthetic_2_small_shift.cpp  test_case.cpp  test_case.hpp
generation/: generator.cpp
generator/: CMakeLists.txt  config.cpp  config.hpp  exception.hpp  generator.cpp  generator.hpp  main.cpp
include/: amaru.h  amaru_double.h  amaru_float.h  amaru_impl.h  common.h  config32.h  ieee.h  table32.h
include/amaru/: amaru.h  common.h  double.h  float.h  ieee32_conv.h  ieee64_conv.h
other/: other.cpp  other.hpp
python/: benchmark.py
research/: results.csv
results/amd-ryzen-7-1800X_linux_gcc-13.2.1/: float_uncentred.csv
src/: CMakeLists.txt  amaru.c  amaru.h  amaru_double.c  amaru_float.c  benchmark.cpp  double.c  double.plt  dragonbox.cpp  dragonbox.hpp  float.c  float.plt  generator.cpp  ieee32_conv.c  ieee64_conv.c  log10_pow2.cpp  log_pow2.cpp  makefile  math.hpp  other.cpp  other.hpp  test.cpp
src/config/: ieee32.json
teju/: CMakeLists.txt  README.md  common.h  config.h  div10.h  double.c  double.h  float.c  float.h  float128.c  float128.h  float16.c  float16.h  ieee754.h  literal.h  mshift.h  teju.h
teju/include/teju/: double.h  float.h  float128.h  float16.h
teju/src/: common.h  config.h  div10.h  double.c  double.h  float.c  float.h  float128.c  float128.h  float16.c  float16.h  literal.h  mshift.h  teju.h
test/: CMakeLists.txt  built_in_1.cpp  built_in_1_small_shift.cpp  built_in_2.cpp  built_in_4.cpp  div10.cpp  fp_traits.hpp  impl.hpp  infimum.cpp  log.cpp  main.cpp  mshift.cpp  multiply.h  syntectic_1.cpp  syntectic_1_small_shift.cpp  syntectic_2.cpp  syntectic_2_small_shift.cpp  synthetic_1.cpp  synthetic_1_small_shift.cpp  synthetic_2.cpp  synthetic_2.hpp  synthetic_2_small_shift.cpp  test_case.cpp  test_case.hpp
test/div10/: CMakeLists.txt  built_in_1.cpp  built_in_2.cpp  div10.cpp  div10.hpp  syntectic_1.cpp
tests/: test.cpp
tmp/: double.plt  float.plt
